- Fixed problem of not being able to set walk back to awaiting walk leader - Added button to toggle the Assemble Full name to either the walk leader or the currently logged in admin user

--- a/projects/ngx-ramblers/src/app/pages/how-to/subject-listing/subject-listing.html
+++ b/projects/ngx-ramblers/src/app/pages/how-to/subject-listing/subject-listing.html
@@ -22,7 +22,7 @@
               [ngValue]="accessLevel">
           </select>
         </div>
-        <div class="form-group amb-0 flex-grow-1">
+        <div class="form-group flex-grow-1">
           <div class="alert {{notifyTarget.alert.class}} ml-3">
             <fa-icon [icon]="notifyTarget.alert.icon"></fa-icon>
             <strong *ngIf="notifyTarget.alertTitle">
