* Migrated Walk Change Notifications from Mailchimp to Brevo  * Walk notifications now 100% driven from automation, using a new Brevo Template called fully-automated-text-body.  * The template has no manually input template content except the following parameters when fully populate the email content at run-time:    * params.systemMergeFields.APP_SHORTNAME    * params.messageMergeFields.subject    * params.memberMergeFields.FNAME    * params.messageMergeFields.BODY_CONTENT    * params.messageMergeFields.SIGNOFF_NAMES  * Email Notification Config is setup in an identical way to other Member Admin driven configurations.  * A new "Built-in Process Mappings" tab on mail-settings now allows each built-in process (currently forgotten-password and walk change notifications) to bs associated with a Notification Configuration.  * If a Notification Configurations is associated with a built-in process, it will not be available in the list of email types in Member Admin Send emails dialog. This is because a built-in process needs to supply customised content to the email request which won't be available unless it's called by the built-in process.

--- a/projects/ngx-ramblers/src/app/pages/walks/walk-meetup/walk-meetup.component.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-meetup/walk-meetup.component.html
@@ -2,7 +2,7 @@
   <div class="row img-thumbnail thumbnail-walk-edit">
     <div class="thumbnail-heading">Meetup</div>
     <div class="d-none">
-      <ng-template app-walk-notification-template></ng-template>
+      <ng-template app-notification-directive></ng-template>
     </div>
     <div class="row">
       <div class="col-sm-12">
@@ -36,7 +36,7 @@
           <app-markdown-editor *ngIf="meetupConfigExists()"
                                [initialView]="view"
                                [name]="'meetup-event-description'"
-                               [category]="CONTENT_CATEGORY"
+                               [category]="ContentTextCategory.MEETUP_DESCRIPTION_PREFIX"
                                [text]="meetupEventDescription"
                                [rows]="7"
                                [description]="'Meetup event description'">
