--- a/projects/ngx-ramblers/src/app/modules/common/action-buttons/action-buttons.html
+++ b/projects/ngx-ramblers/src/app/modules/common/action-buttons/action-buttons.html
@@ -6,6 +6,8 @@
         <app-svg (click)="back()"
                  [disabled]="backDisabled()"
                  class="icon"
+                 height="36"
+                 width="36"
                  icon="i-back-round">
         </app-svg>
         <span class="sr-only">Previous slide</span></button>
@@ -13,6 +15,8 @@
         <app-svg (click)="forward()"
                  [disabled]="forwardDisabled()"
                  class="icon"
+                 height="36"
+                 width="36"
                  icon="i-forward-round">
         </app-svg>
         <span class="sr-only">Next slide</span></button>
