* Migrated Expense Notifications from Mailchimp to Brevo  * Uses identical pattern to Walk notifications now 100% driven from automation, using a new Brevo Template called fully-automated-text-body.  * New Notification Configuration for Expense Notification mapped on "Built-in Process Mappings" tab on admin/mail-settings page * Fixed receipt upload error in expense modal dialog that caused the uploaded data to not be reflected in the expense claim

--- a/projects/ngx-ramblers/src/app/pages/admin/expenses/modals/expense-return-modal.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/expenses/modals/expense-return-modal.component.html
@@ -33,9 +33,9 @@
     </div>
   </div>
   <div class="modal-footer">
-    <input type="submit" value="Confirm Return" [disabled]="notifyTarget.busy"
+    <input type="submit" value="Confirm Return" [disabled]="disabled()"
            (click)="confirmReturnExpenseClaim(returnReason)" title="Confirm return of this Expense Claim"
-           [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-left': 'button-form amber-confirm button-form-left'">
+           [ngClass]="disabled() ? 'disabled-button-form button-form-left': 'button-form amber-confirm button-form-left'">
     <input type="submit" value="Cancel Return" [disabled]="notifyTarget.busy" (click)="cancelReturnExpenseClaim()"
            title="Don't return this Expense Claim, just close this form"
            [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-left': 'button-form green-confirm button-form-left'">
