* Walk Change Notifications Bug fixes:   * Walk Change Notifications members were not previously being notified   * Restart password flow improved, so that original dialog is cleared before navigating to new dialog   * Mailing Preferences checkboxes fixed   * Disabled checkbox now styled in grey rather than default blue

--- a/projects/ngx-ramblers/src/app/assets/styles/checkboxes.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/checkboxes.sass
@@ -3,3 +3,7 @@
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before
   background: $ramblers-colour-sunrise
   border: $ramblers-colour-sunrise
+
+.custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before
+  background: $ramblers-colour-grey
+  border: $ramblers-colour-grey
