--- a/projects/ngx-ramblers/src/app/pages/login/reset-password-modal/reset-password-modal.component.html
+++ b/projects/ngx-ramblers/src/app/pages/login/reset-password-modal/reset-password-modal.component.html
@@ -48,12 +48,10 @@
     <div class="row col-sm-12">
       <input type="submit" [disabled]="!submittable()" value="Confirm Reset" (click)="resetPassword()"
              (keyup.enter)="resetPassword()"
-             title="Confirm Reset"
              [ngClass]="submittable() ? 'button-form button-form-left': 'disabled-button-form button-form-left'">
       <input type="reset" value="Cancel" (click)="close()" title="Cancel reset passwprd"
              [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-left': 'button-form button-form-left'">
-      <input type="reset" value="Restart Forgot Password" (click)="forgotPassword()"
-             title="I've forgotten my password"
+      <input type="reset" value="Restart Forgot Password" (click)="restartForgotPassword()"
              [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-left': 'button-form button-form-left'">
     </div>
   </div>
