* Migrating Mailchimp Campaigns to Brevo * Created folders, contacts, lists endpoints and wired into new MailServices

--- a/projects/ngx-ramblers/src/app/pages/admin/member-admin/member-admin.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/member-admin/member-admin.component.html
@@ -44,6 +44,10 @@
                      value="Update Mailchimp Lists"
                      (click)="updateMailchimpLists()" title="Update Mailchimp Lists"
                      [ngClass]="notifyTarget.busy || noMailchimpListsConfigured ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab'">
+                  <input [disabled]="notifyTarget.busy || noMailchimpListsConfigured" type="submit"
+                         value="Update Brevo Lists"
+                         (click)="updateBrevoLists()" title="Update Brevo Lists"
+                         [ngClass]="notifyTarget.busy ? 'disabled-button-form button-form-in-tab': 'button-form button-form-in-tab'">
             </ng-container>
                 <ng-container>
               <input *ngIf="!confirm.bulkDeleteOutstanding()" [disabled]="notifyTarget.busy" type="submit"
