--- a/projects/ngx-ramblers/src/app/pages/admin/member-admin-modal/member-admin-modal.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/member-admin-modal/member-admin-modal.component.html
@@ -274,84 +274,8 @@
           </div>
         </div>
       </tab>
-      <tab heading="Mailchimp">
-        <div class="img-thumbnail thumbnail-admin-edit">
-          <div class="row" *ngIf="member.mailchimpLists">
-            <div class="col-sm-12">
-              <p>Please select how {{member | fullNameWithAlias}} wants to be <b>emailed</b>
-                by using the subscription checkboxes below. To see the member entry in a
-                mailchimp list, click the corresponding mailchimp icon</p>
-
-              <div *ngIf="mailchimpConfig?.lists?.general" class="row">
-                <div class="col-sm-5">
-                  <div class="custom-control custom-checkbox">
-                    <input (change)="changeSubscribed('general')"
-                           [(ngModel)]="member.mailchimpLists.general.subscribed"
-                           type="checkbox" class="custom-control-input" id="subscribe-general-emails">
-                    <label class="custom-control-label"
-                           for="subscribe-general-emails">General emails
-                    </label>
-                  </div>
-                </div>
-                <div class="col-sm-7">
-                  <button [disabled]="!member?.mailchimpLists?.general.web_id"
-                          (click)="viewMailchimpListEntry(member?.mailchimpLists?.general.web_id)"
-                          title="View general list entry In Mailchimp">
-                    <img
-                      [ngClass]="member?.mailchimpLists?.general.web_id ? 'mailchimp-logo': 'mailchimp-logo disabled-image'"
-                      src="/assets/images/mailchimp/freddie_wink.svg"
-                      alt="View general list entry In Mailchimp"></button>
-                </div>
-                <div class="col-sm-12">
-                  <app-mailchimp-segment-editor [showTitle]="true"
-                    [segments]="member?.mailchimpSegmentIds"></app-mailchimp-segment-editor>
-                </div>
-              </div>
-              <div *ngIf="mailchimpConfig?.lists?.walks" class="row">
-                <div class="col-sm-5">
-                  <div class="custom-control custom-checkbox">
-                    <input (change)="changeSubscribed('walks')" [(ngModel)]="member.mailchimpLists.walks.subscribed"
-                           type="checkbox" class="custom-control-input" id="subscribe-walks-emails">
-                    <label class="custom-control-label"
-                           for="subscribe-walks-emails">Walks emails
-                    </label>
-                  </div>
-                </div>
-                <div class="col-sm-7">
-                  <button [disabled]="!member?.mailchimpLists?.walks?.web_id"
-                          (click)="viewMailchimpListEntry(member?.mailchimpLists?.walks?.web_id)"
-                          title="View walks list entry In Mailchimp">
-                    <img
-                      [ngClass]="member?.mailchimpLists?.walks?.web_id ? 'mailchimp-logo': 'mailchimp-logo disabled-image'"
-                      src="/assets/images/mailchimp/freddie_wink.svg"
-                      alt="View walks list entry In Mailchimp"></button>
-                </div>
-              </div>
-              <div *ngIf="mailchimpConfig?.lists?.socialEvents" class="row">
-                <div class="col-sm-5">
-                  <div class="custom-control custom-checkbox">
-                    <input (change)="changeSubscribed('socialEvents')"
-                           [(ngModel)]="member.mailchimpLists.socialEvents.subscribed"
-                           type="checkbox" class="custom-control-input" id="subscribe-social-events-emails">
-                    <label class="custom-control-label"
-                           for="subscribe-social-events-emails">Social events emails
-                    </label>
-                  </div>
-                </div>
-                <div class="col-sm-7">
-                  <button [disabled]="!member?.mailchimpLists?.socialEvents.web_id"
-                          (click)="viewMailchimpListEntry(member?.mailchimpLists?.socialEvents.web_id)"
-                          title="View social list entry In Mailchimp">
-                    <img
-                      [ngClass]="member?.mailchimpLists?.socialEvents?.web_id ? 'mailchimp-logo': 'mailchimp-logo disabled-image'"
-                      src="/assets/images/mailchimp/freddie_wink.svg"
-                      alt="View social list entry In Mailchimp"></button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </tab>
+      <tab app-mailchimp-subscription-settings heading="Mailchimp" [member]="member" [mailchimpConfig]="mailchimpConfig"/>
+      <tab app-mail-subscription-settings heading="Brevo" [member]="member" [mailConfig]="mailConfig"/>
       <tab heading="Membership">
         <div class="img-thumbnail thumbnail-admin-edit">
           <div class="row">
@@ -381,7 +305,7 @@
           </div>
         </div>
       </tab>
-      <tab heading="Ramblers Systems">
+      <tab heading="Ramblers">
         <div class="img-thumbnail thumbnail-admin-edit">
           <div class="row">
             <div class="col-sm-12">
